portfolio_website/src/components/header/header.css
header {
    height: 100vh;
    padding-top: 7rem;
    overflow: hidden;
}

.header__container {
    text-align: center;
    height: 100%;
    position: relative;
}

/* CTA (CALL TO ACTION BTNS) */

/* flex to get some space tween */
.cta {
    margin-top: 2.5rem;
    display: flex;
    gap: 1.2rem;
    justify-content: center;
}

/* HEADER SOCIALS */
.header__socials {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.8rem;
    position: absolute;
    left: 0;
    bottom: 3rem;
}

.header__socials::after {
    content: '';
    width: 1px;
    height: 2rem;
    background: var(--color-primary);
}

/* PERSONAL IMAGE */


.me {
    background: linear-gradient(var(--color-primary), transparent); /*var(--color-primary);*/
    width: 22rem;
    height: 27rem; /* originally 30 */
    position: absolute;
    left: calc(50% - 11rem); /* could do translateX(-50%) */
    margin-top: 4rem;
    border-radius: 12rem 12rem 0 0; /*top left, top right, bot left, bot right*/
    overflow: hidden;
    padding: 5rem 1.5rem 1.5rem 1.5rem;
}

/* SCROLL DOWN */
.scroll__down {
    position: absolute;
    right: -2.3rem;
    bottom: 5rem;
    transform: rotate(90deg);
    font-weight: 300;
    font-size: 0.9rem;
}

/* MEDIA QUERIES (MEDIUM DEVICES)  */

/* For tablets */
@media screen and (max-width: 1024px) {
    header {
        height: 80vh; /* height: 68vh; */ /* vh = viewport height*/
    }
}

/* For phones - don't display icons */
@media screen and (max-width: 600px) {
    header {
        height: 100vh;
    }

    .header__socials, .scroll__down {
        display: none;
    }
}

